--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "nuxt": "^3.14.1592",
+    "pixi.js": "^8.6.6",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.83.0",
+    "sass-loader": "^16.0.4"
   }
 }
